--- a/lovelife.html
+++ b/lovelife.html
@@ -18,8 +18,8 @@
     <img class=" mw-100 heart" src="heartBG-01.svg" alt="">
   </div>
   <div>
-    <img class="four" src="fourZeroFour-01.svg" alt="">
+    <img class="four" src="error-01.svg" alt="">
   </div class="">
-  <img class="error" src="error-01.svg" alt="">
+  <img class="error" src="error-02.svg" alt="">
 </body>
 </html>
